--- a/PalansoftWeb/palansoft-interactive/src/index.css
+++ b/PalansoftWeb/palansoft-interactive/src/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 ul {
   list-style: none;
 }
@@ -35,6 +36,7 @@ div {
   text-decoration: none;
   outline: none;
 }
+
 .divider-1,
 .divider-2,
 .divider-3,
@@ -47,27 +49,35 @@ div {
   clear: both;
   height: 10px;
 }
+
 .divider-2 {
   height: 20px;
 }
+
 .divider-3 {
   height: 30px;
 }
+
 .divider-4 {
   height: 40px;
 }
+
 .divider-5 {
   height: 50px;
 }
+
 .divider-6 {
   height: 60px;
 }
+
 .divider-7 {
   height: 70px;
 }
+
 .divider-8 {
   height: 80px;
 }
+
 .divider-9 {
   height: 90px;
 }
@@ -75,9 +85,11 @@ div {
 .text-left {
   text-align: left;
 }
+
 .text-right {
   text-align: right;
 }
+
 .text-center {
   text-align: center;
 }
@@ -87,43 +99,53 @@ h2.page-title-1,
   font-size: 24px;
   clear: both;
 }
+
 h2.page-sub-title-1,
 .page-sub-title-1 {
   font-size: 16px;
   clear: both;
   font-weight: 300;
 }
+
 .navbar-con-main {
   margin-bottom: 50px;
 }
+
 .middle-con-main-con {
   clear: both;
   float: left;
   width: 100%;
   margin-bottom: 100px;
 }
+
 .footer-main-con {
-  margin-top: 100px;
+
   clear: both;
   float: left;
   width: 100%;
   color: #888;
   border-top: solid 10px #333;
+  background: #000;
 }
+
 .footer-main-con .border-top {
   border-color: #333;
 }
+
 .form-main-con-1 {
   width: 100%;
+  min-height: 60vh;
   max-width: 400px;
   margin: auto;
   padding: 50px 40px;
   color: #fff;
   background: rgba(0, 0, 0, 0.8);
 }
+
 .form-main-con-1 p {
   color: #666;
 }
+
 .homepage-main-bg-1 {
   position: fixed;
   z-index: -1;
@@ -135,8 +157,9 @@ h2.page-sub-title-1,
   object-fit: cover;
   width: 100vw;
   height: 100vh;
-  display: none;
+
 }
+
 body {
   background: #000 !important;
 }
@@ -151,32 +174,40 @@ body.page .navbar-con-main {
 .homepage-main-con {
   margin: auto;
   position: relative;
-  top: 15vh;
-  text-align: center;
-  line-height: 50px;
   clear: both;
   float: left;
   width: 100%;
 }
-.homepage-main-con h1 {
+
+.homepage-main-con .home-inn-con-1 {
+  top: 15vh;
+  text-align: center;
+  line-height: 50px;
+}
+
+.homepage-main-con .home-inn-con-1 h1 {
   font-size: 42px;
   font-weight: 800;
   margin: 50px auto 20px;
   text-transform: uppercase;
 }
-.homepage-main-con h2 {
+
+.homepage-main-con .home-inn-con-1 h2 {
   font-size: 26px;
   font-weight: 400;
   margin: 20px auto;
 }
-.homepage-main-con h3 {
+
+.homepage-main-con .home-inn-con-1 h3 {
   font-size: 22px;
   font-weight: 400;
   margin: 10px auto;
 }
-.homepage-main-con * {
+
+.homepage-main-con .home-inn-con-1 * {
   color: #fff;
 }
+
 .homepage-main-con .btn-start,
 .homepage-main-con .btn-start:hover,
 .homepage-main-con .btn-start:focus {
@@ -195,25 +226,31 @@ body.page .navbar-con-main {
   box-shadow: none;
   transform: none;
 }
+
 .homepage-main-con .btn-start:hover,
 .homepage-main-con .btn-start:focus {
   background-color: rgb(187, 0, 0);
 }
+
 .home .navbar-light .navbar-toggler {
   color: #fff;
 }
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
+
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
+
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
@@ -223,13 +260,16 @@ body.page .navbar-con-main {
   height: 5px;
   scroll-behavior: smooth;
 }
+
 .movie-row-inn-con::-webkit-scrollbar-track {
   background: #333;
 }
+
 .movie-row-inn-con::-webkit-scrollbar-thumb {
   background: red;
   cursor: pointer;
 }
+
 .movie-row-inn-con {
   overflow-y: hidden;
   overflow-x: scroll;
@@ -237,6 +277,7 @@ body.page .navbar-con-main {
   padding: 0px 0px 10px !important;
   margin: 10px auto;
 }
+
 .movie-row-inn-con .movie-img,
 .movie-row-inn-con .movie-img-large,
 .movie-row-inn-con .movie-img-banner {
@@ -245,21 +286,26 @@ body.page .navbar-con-main {
   max-height: 300px;
   width: 300px;
   object-fit: contain;
-  transition: transform 0.5s; /* Animation */
+  transition: transform 0.5s;
+  /* Animation */
   cursor: pointer;
 }
+
 .movie-row-inn-con .movie-img-large {
   max-height: 500px;
   width: 100%;
 }
+
 .movie-row-inn-con .movie-img:hover {
   transform: scale(1.06);
 }
+
 .movie-banner-con-main {
   height: 400px;
   position: relative;
   overflow: hidden;
 }
+
 .movie-banner-con-main .movie-img-banner {
   width: 100%;
   max-width: 100%;
@@ -267,6 +313,7 @@ body.page .navbar-con-main {
   position: relative;
   overflow: hidden;
 }
+
 .movie-banner-con-main .banner-con-box {
   position: absolute;
   z-index: 99;
@@ -286,30 +333,38 @@ body.page .navbar-con-main {
   opacity: 0.4;
   cursor: pointer;
 }
+
 .movie-banner-con-main .banner-con-box:hover {
   opacity: 1;
 }
+
 .movie-banner-con-main:hover img {
   transform: scale(1.06);
   transition: transform 0.4s;
 }
+
 .movie-banner-con-main img {
   position: relative;
   z-index: 0;
 }
+
 .faq-con-main {
   clear: both;
   float: left;
   width: 100%;
-  margin: 250px auto 0px auto;
+  padding: 100px 0px;
+  margin: 50px auto 0px auto;
   display: block;
+  background: #000;
 }
+
 .faq-con-main .accordion-item {
   background: #303030;
   padding: 0px;
   margin: 0px auto 10px;
   box-shadow: none;
 }
+
 .faq-con-main .accordion-header,
 .faq-con-main .accordion-button:focus,
 .faq-con-main .accordion-button,
@@ -322,6 +377,7 @@ body.page .navbar-con-main {
   text-align: left;
   border-bottom: solid 1px transparent;
 }
+
 .faq-con-main .accordion-button:not(.collapsed) {
   border-bottom-color: #1a1919;
 }
@@ -337,22 +393,27 @@ body.page .navbar-con-main {
   height: 18px;
   overflow: hidden;
 }
+
 .faq-con-main .accordion-button:not(.collapsed)::after {
   content: '+';
   transform: rotate(135deg);
   margin-right: 0px;
 }
+
 .btn-danger {
   background: red;
 }
+
 .btn-danger:hover,
 .btn-danger:focus {
   background-color: rgb(187, 0, 0);
 }
+
 .btn-link,
 .btn-link-white {
   color: #fff;
 }
+
 .btn-link:hover,
 .btn-link:focus,
 .btn-link-white:hover,
@@ -364,21 +425,30 @@ body.page .navbar-con-main {
 .btn-link-black {
   color: #000;
 }
+
 .btn-link-black:hover,
 .btn-link-black:focus {
   color: #000;
   border-color: #000;
 }
+
+.navbar {
+  margin-bottom: 50px;
+}
+
 .navbar-right-con a {
   margin-left: 10px;
 }
+
 .navbar-right-con .dropdown a {
   width: 100%;
   margin: 0px auto;
 }
+
 .act-box-main-con {
   border: none;
 }
+
 .user-active-out-con {
   clear: both;
   float: left;
@@ -386,20 +456,24 @@ body.page .navbar-con-main {
   flex-wrap: wrap;
   line-height: normal;
 }
+
 .user-active-out-con .act-box-main-con {
   float: left;
   width: 31.33%;
   text-align: left;
   margin: 10px 10px;
 }
+
 .act-box-main-con .con-data {
   font-size: 14px;
   display: block;
   color: #000;
 }
+
 .act-box-main-con .con-data .fa {
   color: #000;
 }
+
 .act-box-main-con .act-price {
   position: absolute;
   background: rgba(0, 0, 0, 0.8);
@@ -412,15 +486,18 @@ body.page .navbar-con-main {
   z-index: 99;
   display: none;
 }
+
 .act-box-main-con .act-price.paid {
   display: block;
 }
+
 .act-box-main-con .act-price .fa {
   color: #fff;
   font-size: 14px;
   font-weight: 400;
   margin: -3px 2px 0px -5px;
 }
+
 .act-box-main-con .act-img-con {
   position: relative;
   overflow: hidden;
@@ -429,6 +506,7 @@ body.page .navbar-con-main {
   background-color: red;
   width: 100%;
 }
+
 .act-box-main-con .act-img-con img {
   z-index: 0;
   height: 100%;
@@ -436,11 +514,14 @@ body.page .navbar-con-main {
   border: none;
   border: solid 2px #fff;
   position: absolute;
-  transition: transform 0.5s; /* Animation */
+  transition: transform 0.5s;
+  /* Animation */
 }
+
 .act-box-main-con .act-img-con:hover img {
   transform: scale(1.06);
 }
+
 .act-box-main-con .act-category {
   clear: both;
   width: 100%;
@@ -448,30 +529,36 @@ body.page .navbar-con-main {
   font-weight: 600;
   color: #214463;
 }
+
 .act-box-main-con .act-category * {
   color: #214463;
 }
+
 .act-box-main-con .act-category .fa {
   font-size: 12px;
   font-weight: 300;
   margin: 0px 5px;
   line-height: 20px;
 }
+
 .act-box-main-con .act-name {
   font-size: 28px;
   font-weight: 400;
   margin: 5px 0px;
   line-height: normal;
 }
+
 .act-box-main-con .act-chapter {
   font-size: 18px;
   font-weight: 400;
 }
+
 .act-box-main-con .act-grade {
   font-size: 16px;
   margin: 5px 0px;
   font-weight: 400;
 }
+
 .act-box-main-con .act-lang {
   font-size: 16px;
   font-weight: 400;
@@ -479,68 +566,146 @@ body.page .navbar-con-main {
   display: inline-block;
   margin: 0px 10px;
 }
+
 .act-box-main-con .act-lang *,
 .act-box-main-con .act-lang .fa {
   margin: -2px 5px 0px 5px;
   color: #000;
 }
+
 .icon-big {
   font-size: 24px;
   line-height: normal;
 }
+
 .act-box-main-con .act-rat-icon-con {
   position: relative;
   padding: 5px 30px 5px;
 }
+
 .act-box-main-con .act-rat-icon-con * {
   color: #666;
 }
+
 .act-box-main-con .act-rat-icon-con .icon-big {
   font-size: 14px;
   margin: -4px 10px 0px -30px;
   line-height: normal;
 }
+
 .act-box-main-con .act-rat-icon-con .val-con {
   min-width: 20px;
   display: inline-block;
 }
+
 .act-box-main-con .act-buy-btn-con {
   position: absolute;
   bottom: 15px;
   right: 20px;
 }
+
 .act-box-main-con .act-buy-btn-con .btn {
   display: block;
 }
+
 .act-box-main-con .act-buy-btn-con.paid .btn-danger {
   display: block;
 }
+
 .act-box-main-con .act-buy-btn-con.paid .btn-danger {
   display: none;
 }
+
 .act-box-main-con .act-buy-btn-con.false .btn-warning {
   display: none;
 }
+
 .act-box-main-con .act-buy-btn-con.false .btn-danger {
   display: block;
 }
+
 .text-white,
 .text-white:visited {
   color: #fff;
 }
+
 .text-red,
 .text-red:visited {
   color: red;
 }
+
 .text-black,
 .text-black:visited {
   color: #000;
 }
+
 .text-blue,
 .text-blue:visited {
   color: #214463;
 }
+
 .text-text-gray-1,
 .text-gray-1:visited {
   color: #666;
+}
+
+.user-info-box {
+  clear: both;
+  background: #fff;
+  padding: 10px 10px 10px 100px;
+  margin: 10px auto;
+  color: #000;
+  min-height: 100px;
+  position: relative;
+  border-radius: 10px;
+}
+
+.user-info-box .icon-delete,
+.user-info-box .icon-edit {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  color: #000;
+  cursor: pointer;
+}
+
+.user-info-box .icon-delete {
+  top: 60px;
+}
+
+.user-info-box .user-image {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  overflow: hidden;
+  left: 10px;
+  position: absolute;
+}
+
+.user-info-box .user-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.user-info-box .user-name {
+  width: 100%;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.user-info-box .user-grade,
+.user-info-box .user-language {
+  width: 100%;
+  font-size: 16px;
+  color: #666;
+  clear: both;
+  display: block;
+}
+
+.min-height {
+  min-height: 50vh;
+  background: #fff;
+  padding: 50px;
 }
